<?xml version="1.0" encoding="utf-8"?>
<com.futureelectronics.futuremaplecandy.views.ScanDeviceView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:contentPadding="5dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="5dp"
    android:id="@+id/device_main_view"
    android:clickable="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_device_name"
                android:textSize="@dimen/txt_detail_large"
                android:maxLines="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_detail_norm"
                android:maxLines="1"
                android:text="@string/dummy_device_address" />

            </LinearLayout>



        <TextView
            android:id="@+id/device_rssi_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_signal_strength_unit"
            android:layout_marginEnd="8dp"
            android:textSize="@dimen/txt_detail_norm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/device_rssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_device_rssi"
            android:textSize="@dimen/txt_detail_norm"
            app:layout_constraintEnd_toStartOf="@id/device_rssi_units"
            app:layout_constraintBottom_toBottomOf="@id/device_rssi_units" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_detail_norm"
            android:text="@string/lbl_device_signal_strength"
            app:layout_constraintEnd_toStartOf="@+id/device_rssi"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/device_rssi" />

    </android.support.constraint.ConstraintLayout>


</com.futureelectronics.futuremaplecandy.views.ScanDeviceView>